--- a/audio_process.ipynb
+++ b/audio_process.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMkH1spMBZVZD6IggBkneBA",
+      "authorship_tag": "ABX9TyMQDUTeaKDoF046EQDRN5Tt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,15 +64,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "1d1Nkz4U_Qd1"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -337,7 +328,7 @@
         ")\n",
         "\n",
         "# ノイズ除去した音声をGoogle Driveに保存\n",
-        "drive_clean_path = f'{drive_folder}/clean_{file_basename}.wav'\n",
+        "drive_clean_path = f'{drive_folder}/clean_{file_basename}}_{timestamp}.wav'\n",
         "sf.write(drive_clean_path, reduced_noise_audio, rate)\n",
         "\n",
         "# 音量正規化（pydub）\n",
@@ -345,7 +336,7 @@
         "normalized_audio = effects.normalize(audio_segment)\n",
         "\n",
         "# 最終処理済み音声をGoogle Driveに保存\n",
-        "drive_final_path = f'{drive_folder}/final_{file_basename}.wav'\n",
+        "drive_final_path = f'{drive_folder}/final_{file_basename}}_{timestamp_str}.wav'\n",
         "normalized_audio.export(drive_final_path, format='wav')\n",
         "\n",
         "print(f\"処理完了！\")\n",
